@@ -1,3 +1,8 @@
+2015-07-09  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSDebug.m: List memory allocation statistics in alphabetical
+	order (by class name) for easier interpretation.
+
 2015-07-08  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Headers/Foundation/NSLock.h:
